Chapter 16 - Extending the Table Model